# nightwire

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile.sandbox  Dockerfile.signal  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.prepackaged.yml  docker-compose.unpatched.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
config/: .env.example  projects.yaml.example  settings.yaml.example
nightwire/: __init__.py  attachments.py  bot.py  claude_runner.py  config.py  diagnostics.py  exceptions.py  logging_config.py  main.py  message_queue.py  nightwire_runner.py  plugin_base.py  plugin_loader.py  prd_builder.py  project_manager.py  rate_limit_cooldown.py  resource_guard.py  sandbox.py  security.py  skill_registry.py  task_manager.py  updater.py
nightwire/autonomous/: __init__.py  commands.py  database.py  exceptions.py  executor.py  learnings.py  loop.py  manager.py  models.py  quality_gates.py  verifier.py
nightwire/commands/: __init__.py  base.py  core.py
nightwire/memory/: __init__.py  commands.py  context_builder.py  database.py  embeddings.py  haiku_summarizer.py  manager.py  models.py
patches/signal-cli/: ProvisioningApi.java  README
patches/signal-cli/jars/: checksums.sha256
plugins/: README.md
scripts/: apply-signal-patches.sh
sidechannel/: __init__.py  __main__.py  bot.py  claude_runner.py  config.py  grok_runner.py  main.py  plugin_base.py  plugin_loader.py  project_manager.py  security.py  sidechannel_runner.py
sidechannel/autonomous/: __init__.py  commands.py  database.py  exceptions.py  executor.py  learnings.py  loop.py  manager.py  quality_gates.py  verifier.py
sidechannel/memory/: commands.py  database.py  embeddings.py  haiku_summarizer.py  manager.py  models.py
tests/: test_benchmark_sdk.py  test_claude_runner.py  test_commands_base.py  test_commands_core.py  test_integration_routing.py  test_logging_config.py  test_m10_signal_ux.py  test_m11_plugin_agents.py  test_m12_usage_tracking.py  test_m13_monitoring.py  test_m14_bug_fixes.py  test_m14_signal_infra.py  test_m14b_deferred.py  test_m15_full_impl.py  test_m15_subagent_spike.py  test_m5_structured.py  test_m8_upstream.py  test_m9_config_diagnostics.py  test_nightwire_runner.py  test_plugin_loader.py  test_rate_limit_cooldown.py  test_resource_guard.py  test_sandbox.py  test_security.py  test_task_manager.py  test_updater.py  test_v305_fixes.py  test_v306_fixes.py  test_v307_fixes.py
tests/autonomous/: test_quality_gates.py  test_subprocess_safety.py  test_verifier.py
tests/memory/: test_haiku_summarizer.py
