[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sidechannel"
version = "1.0.0"
description = "A Signal messaging bot with Claude AI integration for intelligent conversations and autonomous development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "hackingdave"},
]

[project.urls]
Repository = "https://github.com/hackingdave/sidechannel"
"Bug Tracker" = "https://github.com/hackingdave/sidechannel/issues"

[project.scripts]
sidechannel = "sidechannel.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["sidechannel*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
